--- a/styles-white-mode.css
+++ b/styles-white-mode.css
@@ -107,6 +107,12 @@ img {
     }
 }
 
+.card:hover {
+    background-color: rgb(201, 201, 201);
+    -webkit-transform: translateY(-3px);
+    transform: translateY(-3px);
+    transition: 0.3s;
+}
 
 .main-row {
     position: relative;
